add qchem interface

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,14 +8,14 @@ project(EmbeddingIntegralGenerator C CXX)
 if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
   set (CMAKE_AR "xiar")   # needed for libraries with -ipo
   if (${CMAKE_BUILD_TYPE} STREQUAL "Release")
-     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ipo -xHost -opt-prefetch -unroll4")
+     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ipo -xHost -qopt-prefetch -unroll4")
   endif()
 endif()
 
 option(OMP "if OMP is on then the program is compiler with OpenMP support" OFF)
 if (OMP)
   if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -openmp" )
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopenmp" )
   else()
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp" )
   endif()
